# 240-MP-Win

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Main.qml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_validation.yml
.github/workflows/: release.yml
assets/: 240mp.rc
modules/ambient_mode/: manifest.json
modules/ambient_mode/views/: Items.qml  Root.qml
modules/jellyfin/: manifest.json
modules/jellyfin/views/: Auth.qml  Boxset.qml  Item.qml  ItemSeason.qml  ItemShow.qml  Items.qml  Libraries.qml  Player.qml  QuickConnect.qml  Root.qml
modules/local_files/: manifest.json
modules/local_files/views/: ContinueWatching.qml  Detail.qml  Episodes.qml  Home.qml  Items.qml  Player.qml  Root.qml  Watchlist.qml
modules/plex/: manifest.json
modules/plex/views/: Episodes.qml  Home.qml  Item.qml  ItemSeason.qml  ItemShow.qml  Items.qml  Libraries.qml  Library.qml  LiveChannels.qml  PinAuth.qml  Player.qml  Root.qml  ServerSelect.qml  UserSelect.qml
modules/youtube/: manifest.json
modules/youtube/views/: Channels.qml  Items.qml  Player.qml  Playlists.qml  Root.qml  Subscriptions.qml
scripts/: ambient-osc.lua  get-upscalers.ps1  install.ps1  media-keys.lua  mpv-osc.lua  run-local.ps1  screensaver.lua
shaders/upscalers/: .gitignore  README.md
src/: AppCore.cpp  AppCore.h  main.cpp  win_utils.cpp  win_utils.h
src/input/: InputManager.cpp  InputManager.h
src/modules/ambient_mode/: AmbientModeBackend.cpp  AmbientModeBackend.h
src/modules/jellyfin/: JellyfinBackend.cpp  JellyfinBackend.h
src/modules/local_files/: LocalFilesBackend.cpp  LocalFilesBackend.h
src/modules/plex/: PlexBackend.cpp  PlexBackend.h
src/modules/youtube/: YouTubeBackend.cpp  YouTubeBackend.h
src/player/: MpvController.cpp  MpvController.h
src/update/: UpdateManager.cpp  UpdateManager.h
tests/mock-mpv/: mock-mpv.ps1  mpv.bat
views/: DirectoryBrowser.qml  ModuleList.qml  ModuleSettings.qml  MultiSelectSettings.qml  ReorderSettings.qml  Settings.qml  Update.qml
views/Components/: AppBar.qml  LoadingText.qml  MarqueeText.qml  NavUtil.qml  qmldir
